# oxideav-tta

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: fuzz.yml
benches/: decode.rs  demuxer.rs  encode.rs  range.rs  roundtrip.rs  streaming.rs
examples/: profile_decode.rs
fuzz/: Cargo.toml
fuzz/corpus/decode/: stereo16.tta  tiny_silent.tta
fuzz/corpus/scan_trailers/: mono16_pw.tta  mono24.tta
fuzz/corpus/trailer_typed/: mono16_ramp.tta  mono24_apev2.tta  stereo16_ape_id3.tta  stereo16_id3v1.tta
fuzz/corpus/typed_header/: format2_6ch24_upper_envelope  invalid_fields_zero_rate  valid_stereo16_44k1
fuzz/fuzz_targets/: corrupt_decode.rs  decode.rs  demuxer.rs  encode_roundtrip.rs  password_streaming.rs  registry_decode.rs  sample_range.rs  scan_trailers.rs  streaming_decode.rs  trailer_typed.rs  typed_header.rs
src/: bitreader.rs  codec.rs  container.rs  crc.rs  crc32.rs  decoder.rs  decorr.rs  decorr_conformance_tests.rs  encoder.rs  error.rs  header.rs  lib.rs  lms.rs  password.rs  registry.rs  rice.rs  roundtrip_tests.rs  seek_tests.rs  stage_b.rs  tables.rs  trace.rs  trailers.rs  unseekable_tests.rs
tables/: README.md  lms-dx-magnitudes.csv  lms-shift.csv
tests/: ffmpeg_roundtrip.rs  handcrafted.rs  inspect.rs  malformed_props.rs  silence.rs
