[package]
name = "oxideav-tta"
version = "0.0.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-tta"
authors = ["Mark Karpeles"]
description = "Pure-Rust True Audio (TTA) lossless audio decoder for the oxideav framework"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-tta"
keywords = ["multimedia", "audio", "tta", "lossless", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::audio"]

[features]
default = ["registry"]
# Wire the crate's `Decoder` impl + `register(ctx)` entry point into
# `oxideav-core`'s codec registry. Disable for standalone builds that
# want the decoder without dragging in the framework.
registry = ["dep:oxideav-core"]
# Activate the `spec/06-trace-contract.md` debug trace emitter. Build
# with `--features trace` and set `OXIDEAV_TTA_TRACE_FILE=<path>` at
# runtime to write a TSV event tape per decoder invocation.
trace = []

[dependencies]
oxideav-core = { version = "0.1", optional = true }
