[package]
name = "oxideav-tta"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-tta"
authors = ["Mark Karpeles"]
description = "Pure-Rust True Audio (TTA) lossless audio decoder for the oxideav framework"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-tta"
keywords = ["multimedia", "audio", "tta", "lossless", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::audio"]

[features]
default = ["registry"]
# Wire the crate's `Decoder` impl + `register(ctx)` entry point into
# `oxideav-core`'s codec registry. Disable for standalone builds that
# want the decoder without dragging in the framework.
registry = ["dep:oxideav-core"]
# Activate the `spec/06-trace-contract.md` debug trace emitter. Build
# with `--features trace` and set `OXIDEAV_TTA_TRACE_FILE=<path>` at
# runtime to write a TSV event tape per decoder invocation.
trace = []

[dependencies]
oxideav-core = { version = "0.1", optional = true }

[dev-dependencies]
# Round 127 (depth-mode benchmarks): Criterion drives the three bench
# harnesses (`decode`, `encode`, `roundtrip`) that future encoder /
# decoder rounds use to A/B their algorithm tweaks. Pinned to the
# same 0.5 line the other OxideAV crates with benches (cinepak,
# magicyuv, h264, pixfmt) already track.
criterion = "0.5"

# Round 127 benches. Each binary lives in `benches/<name>.rs` and is
# self-contained (no committed fixture files — every PCM input is
# synthesised in-bench from a deterministic xorshift seed, then fed
# through the crate's own production `encode` to build the TTA1 byte
# stream the decoder benches consume). Run with:
#     cargo bench -p oxideav-tta --bench <name>
[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "roundtrip"
harness = false
