[package]
name = "oxideav-tta"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-tta"
authors = ["Mark Karpeles"]
description = "Pure-Rust True Audio (TTA) lossless audio decoder for the oxideav framework"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-tta"
keywords = ["multimedia", "audio", "tta", "lossless", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::audio"]

[features]
default = ["registry"]
# Wire the crate's `Decoder` impl + `register(ctx)` entry point into
# `oxideav-core`'s codec registry. Disable for standalone builds that
# want the decoder without dragging in the framework.
registry = ["dep:oxideav-core"]
# Activate the `spec/06-trace-contract.md` debug trace emitter. Build
# with `--features trace` and set `OXIDEAV_TTA_TRACE_FILE=<path>` at
# runtime to write a TSV event tape per decoder invocation.
trace = []

[dependencies]
oxideav-core = { version = "0.1", optional = true }

[dev-dependencies]
# Round 127 (depth-mode benchmarks): Criterion drives the three bench
# harnesses (`decode`, `encode`, `roundtrip`) that future encoder /
# decoder rounds use to A/B their algorithm tweaks. Pinned to the
# same 0.5 line the other OxideAV crates with benches (cinepak,
# magicyuv, h264, pixfmt) already track.
criterion = "0.5"

# Round 319 (demuxer bench): the `demuxer` Criterion harness drives the
# framework `Demuxer` reached through the default-on `registry` feature
# (`RuntimeContext` + `ContainerRegistry::open_demuxer` + a
# `CodecResolver`), so it needs the framework crate at dev time. This is
# the same "0.1" line the library's optional `registry` dependency uses
# — never patch-pin a `0.1.X`.
[dev-dependencies.oxideav-core]
version = "0.1"

# Round 127 benches. Each binary lives in `benches/<name>.rs` and is
# self-contained (no committed fixture files — every PCM input is
# synthesised in-bench from a deterministic xorshift seed, then fed
# through the crate's own production `encode` to build the TTA1 byte
# stream the decoder benches consume). Run with:
#     cargo bench -p oxideav-tta --bench <name>
[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "roundtrip"
harness = false

# Round 193 (streaming + random-access bench): covers the round-187
# decode surface on `Decoder` (`frame_iter`, `decode_frame_at`,
# `seek_to_sample`, `frame_iter_from`). Same self-contained pattern
# as the other three benches (no checked-in fixtures; PCM synthesised
# in-bench then run through the production `encode`).
[[bench]]
name = "streaming"
harness = false

# Round 234 (range + duration-keyed player-API sugar bench): covers
# the r209 / r215 / r219 surface on `Decoder` (`decode_from_sample`,
# `frame_iter_from_sample`, `decode_from_time`, `seek_to_time`,
# `total_duration`, `decode_sample_range`, `frame_iter_sample_range`,
# `decode_time_range`). Same self-contained pattern (no checked-in
# fixtures; PCM synthesised in-bench then run through the production
# `encode` / `encode_with_password`). Includes a format=2 reach cell
# at the same parameter point as the format=1 anchor so the per-
# frame qm re-prime cost is comparable.
[[bench]]
name = "range"
harness = false

# Round 319 (demuxer bench): the framework raw-`.tta` demuxer
# (`src/registry.rs` — parses the TTA1 header + seek table at open,
# emits one self-contained mini-TTA1 packet per audio frame, answers
# O(1) `seek_to(pts)` off the cumulative seek-table offsets) was
# fuzzed in r299 but never benchmarked. This harness measures the
# three demuxer hot paths (open, full `next_packet` drain, `seek_to`
# random access) so future optimisation rounds can A/B against a
# baseline. Requires the `registry` feature; runs under it by default.
[[bench]]
name = "demuxer"
harness = false
required-features = ["registry"]
