[package]
name = "oxideav-tta-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# TTA's framing decoder is the surface worth fuzzing: a 22-byte TTA1
# header (with optional ID3v2 prefix), a `4 * frame_count + 4`-byte
# seek table, then a sequence of per-frame entropy-coded bodies each
# followed by a 4-byte CRC. Header field validation, seek-table bounds,
# block-size arithmetic, the LSB-first bit reader, the adaptive-Rice
# decoder, the Stage-A/B predictors and the inverse channel
# decorrelation cascade are all driven from attacker-controlled bytes.
# There is no external library worth pulling in as a cross-decode
# oracle (and the clean-room wall bars the C reference `libtta` anyway),
# so this fuzz crate covers three internal-only contracts:
#
# - **`decode`**: panic-free decode of arbitrary bytes through
#   `decode` (format=1) and `decode_with_password` (format=2).
# - **`scan_trailers`**: panic-free walk of the trailer-detection
#   path (`spec/01` §7) — exercises the ID3v2 prefix skip, seek-table
#   sum arithmetic, and ID3v1 / APEv2 footer scanner against arbitrary
#   header / trailer-region byte combinations.
# - **`encode_roundtrip`**: panic-free encode AND bit-exact roundtrip
#   through `decode`. Drives `encode` / `encode_with_password` across
#   the `(channels × bps × sample_rate × format × samples)` parameter
#   cube and asserts the encoder either rejects with a typed
#   `Error::Unsupported…` / `InvalidSampleBuffer`, or produces bytes
#   the in-crate decoder accepts and reconstructs to the original
#   `i32` samples bit-exactly.
[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oxideav-tta]
path = ".."
# The decode entry points live behind the default `registry` feature's
# sibling code, but the framing/decoder path itself is feature-agnostic.
# Disable default features so the fuzz crate does not drag in
# `oxideav-core`; the `decode` / `decode_with_password` functions are
# always compiled.
default-features = false

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

[[bin]]
name = "scan_trailers"
path = "fuzz_targets/scan_trailers.rs"
test = false
doc = false

[[bin]]
name = "encode_roundtrip"
path = "fuzz_targets/encode_roundtrip.rs"
test = false
doc = false
