[package]
name = "oxideav-tta-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# TTA's framing decoder is the surface worth fuzzing: a 22-byte TTA1
# header (with optional ID3v2 prefix), a `4 * frame_count + 4`-byte
# seek table, then a sequence of per-frame entropy-coded bodies each
# followed by a 4-byte CRC. Header field validation, seek-table bounds,
# block-size arithmetic, the LSB-first bit reader, the adaptive-Rice
# decoder, the Stage-A/B predictors and the inverse channel
# decorrelation cascade are all driven from attacker-controlled bytes.
# There is no external library worth pulling in as a cross-decode
# oracle (and the clean-room wall bars the C reference `libtta` anyway),
# so this fuzz crate covers three internal-only contracts:
#
# - **`decode`**: panic-free decode of arbitrary bytes through
#   `decode` (format=1) and `decode_with_password` (format=2).
# - **`scan_trailers`**: panic-free walk of the trailer-detection
#   path (`spec/01` §7) — exercises the ID3v2 prefix skip, seek-table
#   sum arithmetic, and ID3v1 / APEv2 footer scanner against arbitrary
#   header / trailer-region byte combinations.
# - **`encode_roundtrip`**: panic-free encode AND bit-exact roundtrip
#   through `decode`. Drives `encode` / `encode_with_password` across
#   the `(channels × bps × sample_rate × format × samples)` parameter
#   cube and asserts the encoder either rejects with a typed
#   `Error::Unsupported…` / `InvalidSampleBuffer`, or produces bytes
#   the in-crate decoder accepts and reconstructs to the original
#   `i32` samples bit-exactly.
# - **`streaming_decode`** (round 190): panic-free walk of the round-
#   187 streaming + random-access decode surface on `Decoder`
#   (`frame_iter`, `decode_frame_at`, `seek_to_sample`,
#   `frame_iter_from`). Asserts cross-API agreement against the eager
#   `decode_all` baseline on every fuzz-constructed input: the lazy
#   `frame_iter` must concatenate to the eager output, `decode_frame_at`
#   must match the eager slice, `seek_to_sample`'s returned indices
#   must be in range, and `frame_iter_from(start)` must equal the
#   eager suffix from the corresponding sample boundary.
# - **`sample_range`** (round 226): panic-free walk of the round-209 /
#   round-215 / round-219 player-API sugar on `Decoder` —
#   `decode_from_sample`, `frame_iter_from_sample`,
#   `decode_sample_range(start, end)`, `frame_iter_sample_range`,
#   `decode_time_range`, `frame_iter_time_range`. Folds attacker-
#   chosen `(start, end)` seeds against the constructed Decoder's
#   `total_samples` and asserts: (i) `decode_from_sample(s)` equals
#   `decode_all()[s * channels..]`; (ii) `decode_sample_range(s, e)`
#   equals `decode_all()[s * channels .. e * channels]`; (iii) lazy
#   `frame_iter_*` concatenations equal their eager siblings; (iv) the
#   boundary collapses `(0, total) ⇔ decode_all`,
#   `(s, total) ⇔ decode_from_sample(s)`, `(s, s) ⇔ Ok(vec![])`;
#   (v) `start > end` and `end > total_samples` surface
#   `SampleIndexOutOfRange` (panic-free typed rejection); (vi)
#   `decode_time_range(Duration::ZERO, total_duration)` equals
#   `decode_all`.
# - **`typed_header`** (round 276): differential check between the two
#   independent `spec/01` §3 validators — the byte-level parser behind
#   `Decoder::new` and the round-240..262 typed-accessor lift
#   (`StreamHeader::typed()` + the per-field `*_typed` accessors).
#   Synthesizes a 22-byte on-wire header (valid magic + valid CRC32)
#   from attacker-chosen raw fields and asserts both paths surface the
#   SAME first error in §3 table order, that every derived projection
#   on the aggregate view (`to_header` round-trip, `byte_depth`,
#   `regular_frame_samples`, `total_duration`, `pcm_byte_len`,
#   `FrameGeometry` §4.1 invariants) agrees with its raw-header
#   sibling, and that the `FrameDescriptor` / `SeekPoint` lifts accept
#   exactly their documented windows.
[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oxideav-tta]
path = ".."
# The decode entry points live behind the default `registry` feature's
# sibling code, but the framing/decoder path itself is feature-agnostic.
# Disable default features so the fuzz crate does not drag in
# `oxideav-core`; the `decode` / `decode_with_password` functions are
# always compiled.
default-features = false

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

[[bin]]
name = "scan_trailers"
path = "fuzz_targets/scan_trailers.rs"
test = false
doc = false

[[bin]]
name = "encode_roundtrip"
path = "fuzz_targets/encode_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "streaming_decode"
path = "fuzz_targets/streaming_decode.rs"
test = false
doc = false

[[bin]]
name = "sample_range"
path = "fuzz_targets/sample_range.rs"
test = false
doc = false

[[bin]]
name = "typed_header"
path = "fuzz_targets/typed_header.rs"
test = false
doc = false
